<package format="2">
  <name>aqua_cl_ar</name>
  <version>0.0.1</version>
  <description>AR Tag Recognition and Processing for Deep CL</description>
  <maintainer email="hdamron@email.sc.edu">Hunter Damron</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>ar_track_alvar</depend>
  <depend>geometry_msgs</depend>
  <depend>tf</depend>
</package>
